ensure engaged cataid scenes visible during export + minor UI tweaks

--- a/visaid_builder/visaid_ingredients/visaid_embedded_styles.css
+++ b/visaid_builder/visaid_ingredients/visaid_embedded_styles.css
@@ -70,9 +70,9 @@ input[type="checkbox"] {
     background-color: #f3f3f3;
     color: #5e5d5e;
     padding: 2px 10px 2px 10px; 
-    border: 2px solid #bababa;
+    border: 1px solid #bababa;
     border-radius: 12px;
-    margin-right: 16px;
+    margin: 1px 16px 0px 0px;
 }
 pre.metadata {
     font-family: "Noto Sans Mono", "Roboto Mono", "Liberation Mono", "Cascadia Mono", "Consolas", monospace; 
@@ -143,6 +143,11 @@ a {
 }
 .hidden {
     display: none;
+}
+label:hover, 
+input[type="checkbox"],
+button:hover {
+    cursor: pointer;
 }
 @media print {
     div.top {
